<resources>
    <string name="app_name">AvgleClient</string>
    <string name="API_AVGLE_URL">https://api.avgle.com/v1/</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="collection">Collection</string>
    <string name="movieCount">動画数：</string>
    <string name="ponn">本</string>
    <string name="views">" "views</string>
    <string name="separate_dot">・</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signin">SIGNIN</string>
    <string name="singup">SIGNUP</string>
    <string name="orsignup">or singnup with</string>
    <string name="welcome">Welcome to new world</string>
    <string name="is_empty">入力してください</string>
    <string name="please_retry">もう一度やり直してください</string>
    <string name="incorrect_password">パスワードが違います</string>
    <string name="create_account_success">アカウントを作成しました</string>
    <string name="create_account_failed">アカウント作成に失敗しました\nもう一度試してください</string>
    <string name="passoword_min_length_error">パスワードは6文字以上で入力してください</string>
    <string name="create_account">Create Account</string>
    <string name="save_to_playlist">Save to playlist</string>
    <string name="save_to_watchlater">Save to Watch later</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
